@@ -13,7 +13,8 @@
 <body>
 
 <div metal:fill-slot="main"
-     tal:define="global props context/@@plone_tools/properties;">
+     tal:define="global props context/@@plone_tools/properties;
+                 use_email_as_login props/site_properties/use_email_as_login|nothing;">
 
     <h1 class="documentFirstHeading"
         i18n:translate="heading_lost_password">Lost Password</h1>
@@ -25,33 +26,48 @@
         registered to start the process of resetting your password.
     </p>
 
-    <form name="mail_password" 
+    <form name="mail_password"
           class="enableAutoFocus"
           action="mail_password"
           method="post">
         <p>
-            <label i18n:translate="label_my_user_name_is">
+            <label i18n:translate="label_my_user_name_is"
+                   tal:condition="not:use_email_as_login">
                 My user name is
+            </label>
+            <label i18n:translate="label_my_email_address_is"
+                   tal:condition="use_email_as_login">
+              My email address is
             </label>
 
             <input name="userid"
                    id="userid"
                    value=""
-                   tal:attributes="value request/userid|nothing;" 
+                   tal:attributes="value request/userid|nothing;"
                    />
             <input class="context"
-                   type="submit" 
+                   type="submit"
                    value="Start password reset"
                    i18n:attributes="value"
                    />
         </p>
     </form>
 
-    <p i18n:translate="description_lost_password_mail_admin">
+    <p i18n:translate="description_lost_password_mail_admin"
+       tal:condition="not:use_email_as_login">
         If this will not work for you (for example, if you forgot your user
         name or your email address has changed), contact the
     <span i18n:name="site_admin">
-    <a href="#" 
+    <a href="#"
+       i18n:translate="label_site_admin"
+       tal:attributes="href string:${portal_url}/contact-info">site administration</a></span>.
+    </p>
+    <p i18n:translate="description_lost_password_mail_admin_2"
+       tal:condition="use_email_as_login">
+        If this will not work for you (for example, if your email
+        address has changed), contact the
+    <span i18n:name="site_admin">
+    <a href="#"
        i18n:translate="label_site_admin"
        tal:attributes="href string:${portal_url}/contact-info">site administration</a></span>.
     </p>
