@@ -4,14 +4,23 @@
       i18n:domain="passwordresettool">
 <body>
 
-<div metal:fill-slot="main">
+<div metal:fill-slot="main"
+     tal:define="site_properties context/portal_properties/site_properties;
+                 use_email_as_login site_properties/use_email_as_login|nothing;">
 
     <h1 i18n:translate="heading_pwreset_invalid">Error setting password</h1>
 
-    <p i18n:translate="message_pwreset_invalid">
+    <p i18n:translate="message_pwreset_invalid"
+       tal:condition="not:use_email_as_login">
        Sorry, this appears to be an invalid request. Please make sure you copied
        the URL exactly as it appears in your email and that you entered your
        user name correctly.
+    </p>
+    <p i18n:translate="message_pwreset_invalid_with_email"
+       tal:condition="use_email_as_login">
+       Sorry, this appears to be an invalid request. Please make sure you copied
+       the URL exactly as it appears in your email and that you entered your
+       email address correctly.
     </p>
 
 </div>
