@@ -4,6 +4,12 @@ Changelog
 2.0 - Unreleased
 ----------------
 
+- When the new (Plone 4) property use_email_as_login is present and is
+  True, we try to get the member by login name when userid gives no
+  results.
+  Refs http://dev.plone.org/plone/ticket/9214
+  [maurits]
+
 - Avoid acquiring `portal_properties` and call it via a proper API.
   [hannosch]
 
